--- a/aigne.yaml
+++ b/aigne.yaml
@@ -113,6 +113,8 @@ agents:
   - ./agents/update/generate-diagram.yaml
   - ./agents/update/check-generate-diagram.mjs
   - ./agents/update/pre-check-generate-diagram.yaml
+  - ./agents/update/check-sync-image-flag.mjs
+  - ./agents/update/sync-images-and-exit.mjs
 cli:
   chat: ./agents/chat/index.mjs
   agents:
