feat: add support for SVG content in media descriptions

--- a/agents/media/batch-generate-media-description.yaml
+++ b/agents/media/batch-generate-media-description.yaml
@@ -25,6 +25,8 @@ input_schema:
             type: string
           type:
             type: string
+          svgContent:
+            type: string
           mediaFile:
             type: array
             items:
