feat(intent): enhance intentType handling by allowing null values and defaulting to 'updateDocument' for improved robustness in document updates

--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -46,9 +46,11 @@ input_schema:
       type: string
       description: Additional supplementary information
     intentType:
-      type: string
-      description: User intent type analyzed from feedback (addDiagram, updateDiagram, deleteDiagram, updateDocument)
-      enum: ["addDiagram", "updateDiagram", "deleteDiagram", "updateDocument"]
+      type:
+        - string
+        - "null"
+      description: User intent type analyzed from feedback (addDiagram, updateDiagram, deleteDiagram, updateDocument). Can be null if not specified.
+      enum: ["addDiagram", "updateDiagram", "deleteDiagram", "updateDocument", null]
   required:
     - rules
     - detailDataSource
