feat: use nano banana pro to generate doc diagrams (#343)
* feat(diagram): add diagram generation and image replacement functionality

* feat(diagram): enhance diagram generation with type analysis and style selection

* feat(diagram): introduce new diagram analysis and generation capabilities with aspect ratio handling

* feat(image): add image compression functionality using sharp and integrate into diagram replacement process

* feat(diagram): add guideline for concise labeling in diagram generation

* refactor(diagram): improve code formatting and consistency across diagram-related modules

* feat(diagram): enhance diagram analysis and generation instructions with detailed task breakdown and aspect ratio recommendations

* feat(diagram): consolidate image generation process by unifying aspect ratio handling and enhancing diagram analysis with new guidelines

* feat(diagram): update image handling to support relative paths and enhance filename generation for diagrams

* feat(diagram): refine diagram analysis and generation process with enhanced user feedback integration and comprehensive document summarization

* refactor(diagram): improve code formatting and consistency by removing unnecessary whitespace and enhancing documentation clarity

* feat(tests): enhance check-update-is-single tests to verify return values and parameter preservation for various scenarios

* feat(tests): add comprehensive tests for analyzeFeedbackIntent to validate input handling, intent recognition, and error management

* feat(diagram): update default diagram style to 'modern' and streamline configuration for diagramming options

* chore(promp): remove outdated promp file for diagram generation to streamline project structure

* chore(diagram): remove deprecated diagram generation files and update configuration to streamline project structure

* refactor(tests): streamline d2-utils tests by removing deprecated tests and enhancing test setup for file operations

* feat(diagram): impleme

--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -32,6 +32,9 @@ input_schema:
       type: string
     path:
       type: string
+    originalContent:
+      type: string
+      description: The original content of the document before update
     parentId:
       type:
         - string
@@ -42,6 +45,12 @@ input_schema:
     additionalInformation:
       type: string
       description: Additional supplementary information
+    intentType:
+      type:
+        - string
+        - "null"
+      description: User intent type analyzed from feedback (addDiagram, updateDiagram, deleteDiagram, updateDocument). Can be null if not specified.
+      enum: ["addDiagram", "updateDiagram", "deleteDiagram", "updateDocument", null]
   required:
     - rules
     - detailDataSource
