--- a/agents/update/generate-diagram.yaml
+++ b/agents/update/generate-diagram.yaml
@@ -2,13 +2,22 @@ type: team
 task_render_mode: collapse
 name: generateDiagram
 skills:
-  - ../create/draw-diagram.yaml
-  - ../create/wrap-diagram-code.mjs
-reflection:
-  reviewer: ../create/check-diagram.mjs
-  is_approved: isValid
-  max_iterations: 5
-  return_last_on_max_iterations: false
+  # Step 1: Analyze document content to determine diagram type and style
+  - ../create/analyze-diagram-type.mjs
+  # Step 2: Transform output for image generation agent (map aspectRatio to ratio, add size)
+  - type: transform
+    jsonata: |
+      $merge([
+        $,
+        {
+          "ratio": aspectRatio,
+          "size": "1K"
+        }
+      ])
+  # Step 3: Generate diagram image directly with unified agent
+  - ../create/generate-diagram-image.yaml
+  # Step 4: Replace placeholder with generated image
+  - ../create/replace-d2-with-image.mjs
 input_schema:
   type: object
   properties:
@@ -19,11 +28,36 @@ input_schema:
       type: string
       description: Language for diagram labels and text
       default: en
+    diagramming:
+      type: object
+      description: Diagramming configuration
+      properties:
+        style:
+          type: string
+          description: Default diagram style to use when no style is specified in feedback
+    feedback:
+      type: string
+      description: User feedback that may contain style or type preferences, or diagram index (e.g., 'use anthropomorphic style', 'update the second diagram')
+      default: ""
+    originalContent:
+      type: string
+      description: Original document content before modifications. Used to find existing diagrams when updating (may contain DIAGRAM_IMAGE_START, ```d2, or ```mermaid code blocks)
+    diagramIndex:
+      type: number
+      description: Index of the diagram to replace (0-based). If not provided, will try to extract from feedback.
+    path:
+      type: string
+      description: Document path (e.g., "guides/getting-started.md") used for generating image filename
+    docsDir:
+      type: string
+      description: Documentation directory where assets will be saved (relative to project root)
   required:
     - documentContent
 output_schema:
   type: object
   properties:
-    diagramSourceCode:
+    content:
       type: string
-      description: The **diagram source code** generated from the input text.
+      description: The document content with D2 code blocks replaced by generated diagram image.
+  required:
+    - content
