--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@aigne/publish-docs": "^0.14.2",
     "@aigne/secrets": "^0.1.1-beta.3",
     "@blocklet/payment-broker-client": "^1.22.27",
-    "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
     "debug": "^4.4.1",
     "diff": "^8.0.2",
@@ -52,6 +51,7 @@
     "glob": "^11.0.3",
     "gpt-tokenizer": "^3.2.0",
     "image-size": "^2.0.2",
+    "sharp": "^0.33.0",
     "is-in-ci": "^2.0.0",
     "isbinaryfile": "^5.0.6",
     "jsdom": "^26.1.0",
