fix: polish code

--- a/agentic-agents/structure/index.yaml
+++ b/agentic-agents/structure/index.yaml
@@ -15,6 +15,10 @@ input_schema:
       description: User feedback for structure modifications
 objective:
   url: objective.md
+planner:
+  type: ai
+  instructions:
+    url: planner.md
 afs:
   modules:
     - module: local-fs
