--- a/aigne.yaml
+++ b/aigne.yaml
@@ -11,6 +11,8 @@ agents:
   - ./_exp_/index.yaml
   - ./_exp_/generateStructureOrchestrator.yaml
 
+  - ./agentic-agents/create/index.yaml
+
   # Initialization
   - ./agents/init/index.mjs
 
@@ -142,6 +144,7 @@ cli:
       alias: ["remove", "rm"]
       url: ./agents/create/user-remove-document/index.yaml
     - ./agents/clear/index.yaml
+    - ./agentic-agents/create/index.yaml
 mcp_server:
   agents:
     - ./docs-mcp/get-docs-structure.mjs
