fix: polish code

--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -41,11 +41,13 @@ worker:
         description: User feedback describing what documentation tasks to perform (natural language)
   skills:
     - url: ../../agents/create/index.yaml
+      name: ManageDocumentStructure
       default_input:
         isChat: true
-    - url: ../../agents/update/index.yaml
-      default_input:
-        isChat: true
+    # - url: ../../agents/update/index.yaml
+    #   name: 
+    #   default_input:
+    #     isChat: true
     - url: ../../agents/localize/index.yaml
       default_input:
         isChat: true
