--- a/agents/create/generate-diagram-image.yaml
+++ b/agents/create/generate-diagram-image.yaml
@@ -20,6 +20,10 @@ instructions:
   - role: user
     url: ../../prompts/detail/diagram/generate-image-user.md
 
+# Support image-to-image generation by passing existing image via input_file_key
+# If existingImage is provided (array of mediaFile objects), it will be passed to the model
+input_file_key: existingImage
+
 input_schema:
   type: object
   properties:
@@ -51,6 +55,33 @@ input_schema:
       type: string
       description: Aspect ratio of the generated image (alias for ratio, used in prompt templates)
       enum: ["1:1", "5:4", "4:3", "3:2", "16:9", "21:9"]
+    existingImage:
+      type: array
+      nullable: true
+      description: Array of mediaFile objects for existing diagram image (for image-to-image generation). If provided, the model will use this as reference and update based on document content and feedback.
+      items:
+        type: object
+        properties:
+          type:
+            type: string
+            description: File type, should be "local"
+          path:
+            type: string
+            description: Absolute path to the image file
+          filename:
+            type: string
+            description: Image filename
+          mimeType:
+            type: string
+            description: MIME type of the image (e.g., "image/png", "image/jpeg")
+    useImageToImage:
+      type: boolean
+      description: Whether to use image-to-image generation mode. If true and existingImage is provided, the model will update the existing image based on document content and feedback.
+      default: false
+    feedback:
+      type: string
+      description: User feedback for diagram updates. Used in image-to-image mode to guide modifications.
+      default: ""
   required:
     - documentContent
     - diagramType
