--- a/aigne.yaml
+++ b/aigne.yaml
@@ -115,6 +115,7 @@ agents:
   - ./agents/update/pre-check-generate-diagram.yaml
   - ./agents/update/check-sync-image-flag.mjs
   - ./agents/update/sync-images-and-exit.mjs
+  - ./agents/localize/translate-diagram.yaml
 cli:
   chat: ./agents/chat/index.mjs
   agents:
