fix: initialize originalDocumentStructure in userContext to prevent undefined errors

--- a/agents/create/generate-structure.yaml
+++ b/agents/create/generate-structure.yaml
@@ -68,6 +68,7 @@ skills:
   - type: function
     name: aggregateDocumentStructure
     process: |
+      options.context.userContext.originalDocumentStructure ??= [];
       return {
         documentStructure: options.context.userContext.originalDocumentStructure.map((i, index) => ({
           ...i,
