--- a/agents/create/generate-structure.yaml
+++ b/agents/create/generate-structure.yaml
@@ -65,18 +65,7 @@ skills:
 
       - ./utils/merge-document-structures.mjs
 
-  - type: function
-    name: aggregateDocumentStructure
-    process: |
-      return {
-        documentStructure: options.context.userContext.originalDocumentStructure.map((i, index) => ({
-          ...i,
-          id: i.title.toLowerCase().replace(/\s+/g, '-'),
-          index
-        })),
-        projectName: options.context.userContext.projectName,
-        projectDesc: options.context.userContext.projectDesc,
-      }
+  - ./aggregate-document-structure.mjs
 
   - type: ai
     name: refineStructure
